--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rocket Sect</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <nav>
+    <img src="images/logo.svg" alt="Logo da Rocket.sect">
+    <ul>
+      <li>Início</li>
+      <li>Serviços</li>
+      <li>Contato</li>
+    </ul>
+  </nav>
+  <main>
+    <div id="imgmaior">
+      <img src="images/img1.png" alt="Imagem de uma mulher ao lado de seu computador">
+    </div>
+    <div>
+      <p id="titulo">
+        Seus dados estão <span>protegidos</span>?
+      </p>
+        <p id="corpo">
+        A informação é fundamental e de <strong>extrema importância</strong> 
+        para qualquer<br/>empresa.
+        <br/>
+        <br/>
+        Aqui vai um <strong>texto</strong> como se fosse uma empresa de 
+        <span>segurança da informação</span><br/>
+        apresentando o seu produto e com o texto todo estilizado.
+      </p>
+    </div>
+  </main>
+  <div id="line"></div>
+  <footer>
+    <img src="images/padlock.svg" alt="Imagem de um cadeado">
+    para mais informações nos siga no instagram <a href="#">@rocketsect</a>
+    <p id="copyright">&copy; Copyright 2022 Desenvolvido por Raphael Gonzaga - All Rights Reserved</p>
+  </footer>
 </body>
 </html>
